[package]
name = "fina"
version = "0.3.1"
authors = ["Kier Davis <me@kierdavis.com>"]
description = "Opinionated to-do list manager"
repository = "https://github.com/kierdavis/fina"
license = "Apache-2.0"
keywords = ["command-line", "todo", "to-do"]
categories = ["command-line-utilities"]
edition = "2018"

[build-dependencies]
lalrpop = { version = "0.19.0", default-features = false, features = ["lexer"] }

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
clap = { version = "2.33.3", default-features = false }
dirs = { version = "3.0.1", default-features = false }
itertools = { version = "0.9", default-features = false }
lalrpop-util = { version = "0.19.0", default-features = false }
regex = "1.4.2"
sakaagari = { version = "0.2", default-features = false }
serde = { version = "1.0.117", default-features = false, features = ["derive"] }
toml = { version = "0.5.7", default-features = false }
